# locust-compare

./: .gitignore  .pre-commit-config.yaml  Agents.md  README.md  compare_runs.py  pre-commit-todo.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
config-utils/: README.md  pyproject.toml
config-utils/config_utils/: __init__.py  cli.py
tests/: test_compare_reports.py  test_markdown_output.py  test_zip_support.py
tools/config-utils/: README.md  cli.py  pyproject.toml
tools/config-utils/tests/: __init__.py  test_set_operations.py
tools/locust-compare/: README.md  compare_runs.py  pyproject.toml
tools/locust-compare/tests/: conftest.py  test_compare_reports.py  test_html_extraction.py  test_html_feature_map.py  test_load_report.py  test_markdown_output.py  test_metrics.py  test_row.py  test_utils.py  test_zip_support.py
tools/wt-worktree/: PRD.md  README.md  notes.md
tools/wt-worktree/tests/: conftest.py  test_cli.py  test_config.py  test_git.py  test_worktree.py
tools/wt-worktree/wt/: cli.py  config.py  git.py  prompts.py  shell.py  worktree.py
