[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-utils"
version = "0.2.0"
description = "CLI tool for capturing environment variables, Django settings, and performing YAML set operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
config-utils = "cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cli --cov-report=term-missing"
